--- a/index.html
+++ b/index.html
@@ -18,33 +18,20 @@
             <div class="scroll-down"></div>
         </div>
     </header>
-
-    <section class="episodes">
-        <h2>Últimos Episodios</h2>
-        <div class="episodes-grid">
-            <div class="episode-card">
-                <div class="episode-cover"></div>
-                <h3>Episodio #24</h3>
-                <p>La verdad sobre los agujeros negros</p>
-                <button class="btn btn-play">▶ Reproducir</button>
-                <div class="hover-fact">¿Sabías que un agujero negro del tamaño de una moneda tendría la masa de la Tierra?</div>
-            </div>
-            <div class="episode-card">
-                <div class="episode-cover"></div>
-                <h3>Episodio #23</h3>
-                <p>Mitos alimenticios</p>
-                <button class="btn btn-play">▶ Reproducir</button>
-                <div class="hover-fact">La zanahoria mejora la visión... pero este mito fue inventado en la WWII para ocultar el radar</div>
-            </div>
-            <div class="episode-card">
-                <div class="episode-cover"></div>
-                <h3>Episodio #22</h3>
-                <p>Historia oculta del internet</p>
-                <button class="btn btn-play">▶ Reproducir</button>
-                <div class="hover-fact">El primer sitio web del mundo sigue online: http://info.cern.ch</div>
-            </div>
+<section class="episodes">
+    <h2>Últimos Episodios</h2>
+    <div id="featured-episode" class="featured-episode">
+        <!-- El episodio más reciente se cargará aquí -->
+    </div>
+    
+    <div class="other-episodes">
+        <h3>Episodios anteriores</h3>
+        <div id="episodes-grid" class="episodes-grid">
+            <!-- Los últimos 3-4 episodios se cargarán aquí -->
         </div>
-    </section>
+        <a href="biblioteca.html" class="btn btn-accent">Ver todos los episodios</a>
+    </div>
+</section>
 
     <section class="wtf-fact">
         <div class="wtf-content">
