--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
         <button id="randomFactBtn" class="btn btn-accent">Dame un F*ckFact</button>
         <div id="randomFactDisplay" class="random-fact"></div>
-        <p class="copyright">© 2023 F*CKFACTS Corp. Todos los derechos reservados.</p>
+        <p class="copyright">© <script>document.write(new Date().getFullYear())</script> F*CKFACTS Corp. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
