--- a/index.html
+++ b/index.html
@@ -24,20 +24,26 @@
         </div>
     </header>
 
-    <section class="episodes">
-        <h2>Últimos Episodios</h2>
-        <div id="featured-episode" class="featured-episode">
-            <!-- El episodio más reciente se cargará aquí -->
+<section class="episodes">
+    <h2>Último Episodio</h2>
+    <div id="featured-episode" class="featured-episode">
+        <div class="loading-spinner">
+            <div class="spinner"></div>
+            <p>Cargando el último episodio...</p>
         </div>
-        
-        <div class="other-episodes">
-            <h3>Episodios anteriores</h3>
-            <div id="episodes-grid" class="episodes-grid">
-                <!-- Los últimos 3-4 episodios se cargarán aquí -->
+    </div>
+    
+    <div class="other-episodes">
+        <h3>Episodios anteriores</h3>
+        <div id="episodes-grid" class="episodes-grid">
+            <div class="loading-spinner">
+                <div class="spinner"></div>
+                <p>Cargando episodios...</p>
             </div>
-            <a href="biblioteca.html" class="btn btn-accent">Ver todos los episodios</a>
         </div>
-    </section>
+        <a href="biblioteca.html" class="btn btn-accent">Ver todos los episodios</a>
+    </div>
+</section>
 
     <section id="truth-myth" class="truth-myth">
         <div class="truth-myth-content">
