--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
         <button id="randomFactBtn" class="btn btn-accent">Dame un F*ckFact</button>
         <div id="randomFactDisplay" class="random-fact"></div>
         <p class="copyright">© <script>document.write(new Date().getFullYear())</script> F*CKFACTS Corp. Todos los derechos reservados.</p>
+        <div class="developer-credits">
+    <p class="credits-text">Website entirely developed by 
+        <a href="http://linkedin.com/in/javier-torres-rubio" target="_blank" class="dev-name">
+            <span class="name-part">Javier</span>
+            <span class="name-part">Torres</span>
+            <span class="name-part">Rubio</span>
+        </a>
+    </p>
+    <div class="pulse-dots">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+</div>
     </footer>
 
     <script src="script.js"></script>
