--- a/index.html
+++ b/index.html
@@ -157,7 +157,29 @@
             <button type="submit" class="btn btn-accent">Sorpréndeme</button>
         </form>
     </section>
-
+<section class="wtf-stats">
+    <div class="stats-container">
+        <div class="stats-header">
+            <h2>F*CK STATS</h2>
+            <p class="stats-subtitle">Datos que desafían la lógica</p>
+            <div class="stats-icon">📊</div>
+        </div>
+        
+        <div class="stat-card">
+            <div class="stat-content">
+                <p class="stat-text" id="random-stat">Cargando dato impactante...</p>
+                <div class="stat-meta">
+                    <span class="stat-category" id="stat-category">Ciencia</span>
+                    <span class="stat-reload" id="reload-stat"><i class="fas fa-sync-alt"></i> Nuevo dato</span>
+                </div>
+            </div>
+            <div class="stat-actions">
+                <button class="btn-stat" id="share-stat"><i class="fas fa-share-alt"></i></button>
+                <button class="btn-stat" id="save-stat"><i class="fas fa-bookmark"></i></button>
+            </div>
+        </div>
+    </div>
+</section>
     <footer class="footer">
         <div class="social-links">
             <a href="https://www.facebook.com/profile.php?id=61579196526923" target="_blank"><i class="fab fa-facebook"></i></a>
