--- a/index.html
+++ b/index.html
@@ -81,7 +81,20 @@
             <div class="about-image"></div>
         </div>
     </section>
-
+<section class="social-section">
+    <h2>Nuestras Redes Sociales</h2>
+    <div class="iphone-container">
+        <div class="iphone-16-pro-max">
+            <div class="dynamic-island"></div>
+            <div class="lock-screen">
+                <div class="wallpaper">F*CKFACTS</div>
+                <div class="notifications-container">
+                    <!-- Notificaciones se inyectarán aquí con JS -->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     <section class="subscribe">
         <h2>Suscríbete al F*CKFACTS semanal</h2>
         <form class="subscribe-form">
