--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
         <div class="iphone-16-pro-max">
             <div class="dynamic-island"></div>
             <div class="lock-screen">
-                <div class="wallpaper">F*CKFACTS</div>
+                <div class="wallpaper">
+                    <div class="time">00:00</div>
+                    <div class="logo">F*CKFACTS</div>
+                </div>
                 <div class="notifications-container">
                     <!-- Notificaciones se inyectarán aquí con JS -->
                 </div>
