--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
             <div class="lock-screen">
                 <div class="wallpaper">
                     <div class="time">00:00</div>
+                    <div class="date">lunes, 30 de octubre</div>
                     <div class="logo">F*CKFACTS</div>
                 </div>
                 <div class="notifications-container">
-                    <!-- Notificaciones se inyectarán aquí con JS -->
+                    <!-- Notificaciones se generarán aquí -->
                 </div>
             </div>
         </div>
